
* GITHUB#12050: Reuse HNSW graph for intialization during merge (Jack Mazanec)

* GITHUB#12155: Speed up DocValuesRewriteMethod by making use of sortedness. (Greg Miller)

* GITHUB#12139: Faster indexing of string fields. (Adrien Grand)

* GITHUB#12179: Better PostingsEnum reuse in MultiTermQueryConstantScoreBlendedWrapper. (Greg Miller)

Bug Fixes
---------------------

* GITHUB#12158: KeywordField#newSetQuery should clone input BytesRef[] to avoid modifying provided array. (Greg Miller)

* GITHUB#12196: Fix MultiFieldQueryParser to handle both query boost and phrase slop at the same time.  (Jasir KT)

* GITHUB#12202: Fix MultiFieldQueryParser to apply boosts to regexp, wildcard, prefix, range, fuzzy queries.  (Jasir KT)

Build
---------------------

* GITHUB#12131: Generate gradle.properties from gradlew, if absent (Colvin Cowie, Uwe Schindler)

* GITHUB#12188: Building the lucene-core MR-JAR file is now possible without installing
  additionally required Java versions (Java 19, Java 20,...). For compilation, a special
  JAR file with Panama-foreign API signatures of each supported Java version was added to
  source tree. Those can be regenerated an demand with "gradlew :lucene:core:regenerate".
  (Uwe Schindler)

Other
---------------------

* GITHUB#11868: Add a FilterIndexInput and FilterIndexOutput class to more easily and safely create delegate
  IndexInput and IndexOutput classes (Marc D'Mello)

======================== Lucene 9.5.0 =======================

API Changes
---------------------
* GITHUB#12093: Deprecate support for UTF8TaxonomyWriterCache and changed default to LruTaxonomyWriterCache.
  Please use LruTaxonomyWriterCache instead. (Vigya Sharma)

* GITHUB#11998: Add new stored fields and termvectors interfaces: IndexReader.storedFields()
  and IndexReader.termVectors(). Deprecate IndexReader.document() and IndexReader.getTermVector().
  The new APIs do not rely upon ThreadLocal storage for each index segment, which can greatly