@@ -64,6 +64,8 @@ Optimizations
 
 * GITHUB#12179: Better PostingsEnum reuse in MultiTermQueryConstantScoreBlendedWrapper. (Greg Miller)
 
+* GITHUB#12198: Reduced contention when indexing with many threads. (Adrien Grand)
+
 Bug Fixes
 ---------------------
 
